# elfcrunch

./: Makefile  Makefile.in  README.md  bootstrap.sh  config.cache  config.h  config.h.in  config.status  configure  configure.in  configure.scan
autom4te.cache/: output.0  requests  traces.0
config/: mkinstalldirs
lib/: Makefile  Makefile.am  Makefile.in
old/libelfcrunch/: crunch_dis.c  crunch_plt.c  elfcrunch.c  elfcrunch.h
old/xmlelflib/: Makefile  Makefile.am  Makefile.in  elf.dtd  oldelf.dtd  output  test.c  xmlelflib.c  xmlelflib.h  xmlopeninfo.c  xmlopeninfo.h  xmlsaveobjects.c  xmlsaveobjects.h
old/xmlelflib/.deps/: xmlelf_open.P  xmlelflib.P
old/xmlelflib/old/: xmlelflib.c
src/: .gdbhist  Makefile  Makefile.am  Makefile.in  common.h  disasm_dump.c  disasm_dump.h  edisasm.c  edisasm.h  elfobjs.c  elfobjs.h  estrings.h  functions.c  functions.h  gendot.c  gendot.h  globals.h  main.c  mapfunc.c  mapfunc.h  mkmap.sh  objects.c  objects.h  output  output2  plt.c  plt.h  pltmap.c  pltmap.h  refmap.c  refmap.h  target.c  target.h  testprog.c  testprog.dot  vars.c  vars.h  xmlelflib.c  xmlelflib.h
src/.deps/: commands.P  disasm_dump.P  edisasm.P  elfobjs.P  functions.P  gendot.P  help.P  main.P  objects.P  plt.P  pltmap.P  register_builtins.P  show_elf.P  target.P  testcommands.P  testprog.P  vars.P  xmlelflib.P
src/commands/: Makefile  Makefile.am  Makefile.in  builtins.c  builtins.h  commands.c  commands.h  help.c  map.c  set.c  show.c  show_elf.c  testcommands.c
src/commands/.deps/: builtins.P  commands.P  help.P  map.P  register_builtins.P  set.P  show.P  show_elf.P  testcommands.P
src/elflib/: .crunchelflib.h.swp  .gdbhist  Makefile  Makefile.am  Makefile.in  dsymtab.c  dumps.c  dumps.h  dynamic.c  ehdr.c  elfdump.c  elflib.c  elflib.h  pht.c  rel_plt.c  reloc.c  sht.c  strtabs.c  sym.c  symtab.c
src/elflib/.deps/: dsymtab.P  dumps.P  dynamic.P  ehdr.P  elfdump.P  elflib.P  phdr.P  pht.P  rel_plt.P  reloc.P  shdr.P  sht.P  sstrtab.P  strings.P  strings.pp  strtab.P  strtabs.P  sym.P  symtab.P
src/elflib/old/: dstrtab.c  phdr.c  shdr.c  shstrtab.c  strings.c
src/utils/: Makefile  Makefile.am  Makefile.in  bintree.c  bintree.h  data_structs.h  libutil.c  libutil.h  list.c  list.h  utils.h
src/utils/.deps/: bintree.P  libutil.P  list.P
src/utils/old/bintree/: Makefile  bintree.c  bintree.h  libutil.c  libutil.h  output  protos.pl  test.c
src/utils/old/bintree/bak/: bintree.c  bintree.h  test.c
