
AC_INIT(src/main.c)
AC_CONFIG_AUX_DIR(config)

AM_INIT_AUTOMAKE(elfcrunch,0.0.1)
AM_CONFIG_HEADER(config.h)

# Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_RANLIB

# Checks for libraries.
# AC_CHECK_LIB([disasm], [main])
# AC_CHECK_LIB([elflib], [main])

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([fcntl.h stdlib.h string.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T

# Checks for library functions.
# AC_FUNC_MALLOC
AC_FUNC_MEMCMP
AC_FUNC_MMAP
# AC_FUNC_REALLOC
AC_CHECK_FUNCS([memset munmap strdup])

AC_OUTPUT([ Makefile src/Makefile 
          src/elflib/Makefile 
          src/commands/Makefile 
          src/utils/Makefile ])

