
#bin_PROGRAMS = elfdump
#elfdump_SOURCES = elfdump.c

lib_LIBRARIES = libelflib.a

#noinst_PROGRAMS = elfdump
#elfdump_SOURCES = elfdump.c
#LDFLAGS += -L.
#elfdump_LDADD = -lelflib

INCLUDES = -I$(top_srcdir)/src

libelflib_a_SOURCES =  \
dsymtab.c \
dumps.c \
dumps.h \
dynamic.c \
ehdr.c \
elflib.c \
elflib.h \
pht.c \
rel_plt.c \
reloc.c \
sht.c \
strtabs.c \
sym.c \
symtab.c

